--- a/Main/games/Auction/Credits.html
+++ b/Main/games/Auction/Credits.html
@@ -3,20 +3,13 @@ JACKBOX EN ESPAÑOL
 TRADUCCIÓN
 Radioactive Man
 
-REVISIÓN
-Yoshiro
-Akira896
-
-SWFS
+REVISIÓN Y SWFS
 Akira896
 
 IMÁGENES
 Artuhaxis
 Akira896
-
-JACKBOX.LOL
-Akira896
-Eleiber
+Fixed Fun
 
 JACKBOX GAMES
 
