--- a/Main/games/Earwax/Credits.html
+++ b/Main/games/Earwax/Credits.html
@@ -3,18 +3,8 @@ JACKBOX EN ESPAÑOL
 TRADUCCIÓN
 Radioactive Man
 
-REVISIÓN
+REVISIÓN, IMÁGENES Y SWFS
 Akira896
-
-SWFS
-Akira896
-
-IMÁGENES
-Akira896
-
-JACKBOX.LOL
-Akira896
-Eleiber
 
 JACKBOX GAMES
 
