--- a/Main/games/BombInterns/Credits.html
+++ b/Main/games/BombInterns/Credits.html
@@ -3,12 +3,16 @@ JACKBOX EN ESPAÑOL
 TRADUCCIÓN
 Markmtz90
 
+REVISIÓN
+Akira896
+
+AYUDA ADICIONAL
+Artuhaxis
+TheDarkSid3r
+
 IMÁGENES
 Markmtz90
 Fixed Fun
-
-REVISIÓN
-Akira896
 
 DIRECTOR
 Evan Jacover
