--- a/Main/games/BombInterns/Credits.html
+++ b/Main/games/BombInterns/Credits.html
@@ -21,7 +21,7 @@ DIRECTOR ASISTENTE
 Arnie Niekamp
 
 DISEÑADOR PRINCIPAL DE PUZZLES
-Mark Turowitz
+Mark Turowetz
 
 ESCRITOR PRINCIPAL
 Arnie Niekamp
@@ -40,7 +40,7 @@ Andy Poland
 -----IMAGE-----
 DISEÑO DE JUEGO
 Arnie Niekamp
-Mark Turowitz
+Mark Turowetz
 Dave Innis
 Evan Jacover
 Mike Zuba
